# rawr-hq-template

./: .gitattributes  .gitignore  AGENTS.md  AGENTS_SPLIT.md  CONTRIBUTING.md  README.md  UPDATING.md  biome.effect.json  biome.json  bunfig.toml  eslint.config.mjs  nx.json  package.json  rawr.config.ts  rawr.hq.ts  skills-lock.json  the-reactive-codebase.html  the-reactive-codebase.md  tsconfig.base.json  turbo.json  vitest.config.ts  vitest.fast.config.ts  vitest.heavy.cli.config.ts
.claude/: launch.json  (+1 more)
tools/semantica-workbench/: AGENTS.md  README.md  pyproject.toml
tools/semantica-workbench/fixtures/: semantic-evidence-expected.json  semantic-source-manifest.yaml
tools/semantica-workbench/fixtures/docs/: architecture-change-proposal.md  migration-plan.md  runtime-target.md  semantic-evidence-cases.md
tools/semantica-workbench/ontologies/: authority-overlay-v1.json  software-architecture-content-v1.json
tools/semantica-workbench/ontologies/rawr-core-architecture/: authority-document-overlay-v1.yaml  candidate-queue-v1.yaml  classifier-readiness-overlay-v1.yaml  core-architecture-ontology-v1.yaml  ontology-contract-v1.yaml  runtime-realization-overlay-v1.yaml  (+1 more)
tools/semantica-workbench/prompts/: authority-claim-extraction.md  entity-resolution.md  quality-review.md  relation-edge-extraction.md  semantic-evidence-extraction.md
tools/semantica-workbench/queries/: evidence-candidate-new.rq  evidence-decision-grade.rq  evidence-entity-findings.rq  evidence-prohibited-patterns.rq  forbidden-terms.rq  relation-samples.rq  runtime-artifacts.rq  semantic-findings.rq
tools/semantica-workbench/schemas/: architecture-change-frame.schema.json  sweep-evidence-index.schema.json  sweep-llm-evidence-augmentation.schema.json
tools/semantica-workbench/tests/: support.py  test_architecture_change_frame.py  test_core_ontology.py  test_core_query.py  test_document_sweep.py  test_evidence_index.py  test_llm_augmentation.py  test_manifest_extraction.py  test_semantic_capability.py  test_semantic_evidence.py  test_semantica_intake.py  test_semantica_llm_extraction.py  test_workbench.py
tools/semantica-workbench/viewer/: graph-viewer.css  graph-viewer.js
(+4991 files in other folders)
