[project]
name = "rawr-semantica-workbench"
version = "0.1.0"
description = "Repository-local Semantica workbench for RAWR architecture migration documents."
requires-python = ">=3.12,<3.13"
dependencies = [
  "PyYAML>=6.0.3",
  "rdflib>=7.6.0",
  "semantica @ git+https://github.com/Hawksight-AI/semantica.git@ca5f08179374dcb8326046249d919717f2769a04",
]

[project.scripts]
semantica-workbench = "semantica_workbench.cli:main"

[build-system]
requires = ["hatchling>=1.28.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/semantica_workbench"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv]
package = true
